Only extend the recipe label as far as the content goes to help prevent dragging recipes when scrolling on small screens. Leaving in '-ms-fit-content' in case IE starts supporting it in the future.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1272,6 +1272,11 @@
 	
 		.flextable-cell label {
 			white-space: normal;
+			width: fit-content;
+			width: -moz-fit-content;
+			width: -webkit-fit-content;
+			width: -o-fit-content;
+			width: -ms-fit-content;
 		}
 	
 		.flextable-cell .box {
